Begin the basic js of the game

--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Tic Tac Toe</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <section>
     <h1 class="game--title">Tic Tac Toe</h1>
+    <h2 class="game-status"></h2>
     <div class="game--container">
-      <div data-cell-index="0" class="cell"></div>
-      <div data-cell-index="1" class="cell"></div>
-      <div data-cell-index="2" class="cell"></div>
-      <div data-cell-index="3" class="cell"></div>
-      <div data-cell-index="4" class="cell"></div>
-      <div data-cell-index="5" class="cell"></div>
-      <div data-cell-index="6" class="cell"></div>
-      <div data-cell-index="7" class="cell"></div>
-      <div data-cell-index="8" class="cell"></div>
+      <div data-index="0" class="cell"></div>
+      <div data-index="1" class="cell"></div>
+      <div data-index="2" class="cell"></div>
+      <div data-index="3" class="cell"></div>
+      <div data-index="4" class="cell"></div>
+      <div data-index="5" class="cell"></div>
+      <div data-index="6" class="cell"></div>
+      <div data-index="7" class="cell"></div>
+      <div data-index="8" class="cell"></div>
     </div>
-    <h2 class="game--status"></h2>
-    <button class="game--restart">Restart Game</button>
+    <button class="game--restart" onclick="">Restart Game</button>
 
-    <div id = "inputsContainer">
-      <div id = "textBoxContainer">
-        <input type = "text" id = "playerOneName" placeholder="Player One">
-        <input type = "text" id = "playerTwoName" placeholder="Player Two">        
+    <div id="inputsContainer">
+      <div id="textBoxContainer">
+        <input type="text" id="playerOneName" placeholder="Player One">
+        <input type="text" id="playerTwoName" placeholder="Player Two">
       </div>
-      <div id = "buttonsContainer">
-        <button id = "playButton" onclick = "gameBoard.startGame()">Start New Game!</button>
-        <button id = "endGameButton" onclick = "gameBoard.endGame()">End Current Game</button>
+      <div id="buttonsContainer">
+        <button id="startButton" onclick="gameEngine()">Start New Game!</button>
+        <button id="endGameButton">End Current Game</button>
       </div>
     </div>
   </section>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
+
 </html>
