--- a/index.html
+++ b/index.html
@@ -1,45 +1,63 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Tic Tac Toe</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Tic Tac Toe</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  <section>
-    <h1 class="game--title">Tic Tac Toe</h1>
-    <h2 class="game-status"></h2>
-    <div class="game--container" id="squares">
-      <div data-index="0" class="cell" id="cell"></div>
-      <div data-index="1" class="cell" id="cell"></div>
-      <div data-index="2" class="cell" id="cell"></div>
-      <div data-index="3" class="cell" id="cell"></div>
-      <div data-index="4" class="cell" id="cell"></div>
-      <div data-index="5" class="cell" id="cell"></div>
-      <div data-index="6" class="cell" id="cell"></div>
-      <div data-index="7" class="cell" id="cell"></div>
-      <div data-index="8" class="cell" id="cell"></div>
-    </div>
-    <button class="game--restart" onclick="">Restart Game</button>
-
-    <div id="inputsContainer">
-      <div id="textBoxContainer">
-        <input type="text" id="playerOneName" placeholder="Player One">
-        <input type="text" id="playerTwoName" placeholder="Player Two">
+  <body>
+    <section>
+      <h1 class="game--title">Tic Tac Toe</h1>
+      <h2 class="game-status"></h2>
+      <div class="game--container" id="squares">
+        <div data-index="0" class="cell" id="cell"></div>
+        <div data-index="1" class="cell" id="cell"></div>
+        <div data-index="2" class="cell" id="cell"></div>
+        <div data-index="3" class="cell" id="cell"></div>
+        <div data-index="4" class="cell" id="cell"></div>
+        <div data-index="5" class="cell" id="cell"></div>
+        <div data-index="6" class="cell" id="cell"></div>
+        <div data-index="7" class="cell" id="cell"></div>
+        <div data-index="8" class="cell" id="cell"></div>
       </div>
-      <div id="buttonsContainer">
-        <button class="startButton">Start New Game!</button>
-        <button id="endGameButton">End Current Game</button>
+      <button class="game--restart button" onclick="">Restart Game</button>
+
+      <div id="inputsContainer">
+        <div id="textBoxContainer">
+          <input
+            type="text"
+            class="input"
+            id="playerOneName"
+            placeholder="Player One"
+          />
+          <input
+            type="text"
+            class="input"
+            id="playerTwoName"
+            placeholder="Player Two"
+          />
+        </div>
+        <div id="buttonsContainer">
+          <button class="startButton button is-primary">
+            Start New Game!
+          </button>
+          <button id="endGameButton" class="button is-danger">
+            End Current Game
+          </button>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <script src="script.js"></script>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
