End of the game modal

--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
   </head>
 
   <body>
+    <div class="modal">
+      <div class="modal-background"></div>
+      <div class="modal-card">
+        <header class="modal-card-head">
+          <p class="modal-card-title">End of the game!</p>
+        </header>
+        <section class="modal-card-body">
+          <h2 class="game-status"></h2>
+        </section>
+        <footer class="modal-card-foot">
+          <button
+            class="button is-success okay delete"
+            aria-label="close"
+          ></button>
+        </footer>
+      </div>
+    </div>
     <section>
       <h1 class="game--title">Tic Tac Toe</h1>
       <h2 class="game-status"></h2>
