--- a/index.html
+++ b/index.html
@@ -8,31 +8,21 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Tic Tac Toe</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.min.css"
-    />
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <div class="modal">
-      <div class="modal-background"></div>
-      <div class="modal-card">
-        <header class="modal-card-head">
-          <p class="modal-card-title">End of the game!</p>
-        </header>
-        <section class="modal-card-body">
-          <h2 class="game-status"></h2>
-        </section>
-        <footer class="modal-card-foot">
-          <button
-            class="button is-success okay delete"
-            aria-label="close"
-          ></button>
-        </footer>
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Some text in the Modal..</p>
       </div>
+
     </div>
+        
     <section>
       <h1 class="game--title">Tic Tac Toe</h1>
       <h2 class="game-status"></h2>
@@ -74,7 +64,6 @@
         </div>
       </div>
     </section>
-
     <script src="script.js"></script>
   </body>
 </html>
