Finishing newRound function

--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
   <body>
     <!-- The Modal -->
     <div id="myModal" class="modal">
-
       <!-- Modal content -->
       <div class="modal-content">
         <span class="close">&times;</span>
-        <p>Some text in the Modal..</p>
+        <h2 class="game-status"></h2>
       </div>
-
     </div>
-        
+
     <section>
       <h1 class="game--title">Tic Tac Toe</h1>
       <h2 class="game-status"></h2>
