--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
       <h1 class="game--title">Tic Tac Toe</h1>
       <h2 class="game-status"></h2>
       <div class="game--container" id="squares">
-        <div data-index="0" class="cell" id="cell-0"></div>
-        <div data-index="1" class="cell" id="cell-1"></div>
-        <div data-index="2" class="cell" id="cell-2"></div>
-        <div data-index="3" class="cell" id="cell-3"></div>
-        <div data-index="4" class="cell" id="cell-4"></div>
-        <div data-index="5" class="cell" id="cell-5"></div>
-        <div data-index="6" class="cell" id="cell-6"></div>
-        <div data-index="7" class="cell" id="cell-7"></div>
-        <div data-index="8" class="cell" id="cell-8"></div>
+        <div data-index="0" class="cell" id="cell"></div>
+        <div data-index="1" class="cell" id="cell"></div>
+        <div data-index="2" class="cell" id="cell"></div>
+        <div data-index="3" class="cell" id="cell"></div>
+        <div data-index="4" class="cell" id="cell"></div>
+        <div data-index="5" class="cell" id="cell"></div>
+        <div data-index="6" class="cell" id="cell"></div>
+        <div data-index="7" class="cell" id="cell"></div>
+        <div data-index="8" class="cell" id="cell"></div>
       </div>
       <button class="game--restart button" onclick="">Restart Game</button>
 
