--- a/index.html
+++ b/index.html
@@ -1,67 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body>
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
-      <!-- Modal content -->
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <h2 class="game-status"></h2>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Tic Tac Toe</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <!-- The Modal -->
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2 class="winner-msg"></h2>
+    </div>
+  </div>
+
+  <section>
+    <h1 class="game--title">Tic Tac Toe</h1>
+    <div class="game--container" id="squares">
+      <div data-index="0" class="cell" id="cell"></div>
+      <div data-index="1" class="cell" id="cell"></div>
+      <div data-index="2" class="cell" id="cell"></div>
+      <div data-index="3" class="cell" id="cell"></div>
+      <div data-index="4" class="cell" id="cell"></div>
+      <div data-index="5" class="cell" id="cell"></div>
+      <div data-index="6" class="cell" id="cell"></div>
+      <div data-index="7" class="cell" id="cell"></div>
+      <div data-index="8" class="cell" id="cell"></div>
+    </div>
+    <button class="game--restart button" onclick="">Restart Game</button>
+
+    <div id="inputsContainer">
+      <h2 class="status"></h2>
+      <div id="textBoxContainer">
+        <input type="text" class="input" id="playerOneName" placeholder="Player One" />
+        <input type="text" class="input" id="playerTwoName" placeholder="Player Two" />
+      </div>
+      <div id="buttonsContainer">
+        <button class="startButton button is-primary">
+          Start New Game!
+        </button>
+        <button id="endGameButton" class="button is-danger">
+          End Current Game
+        </button>
       </div>
     </div>
+  </section>
+  <script src="script.js"></script>
+</body>
 
-    <section>
-      <h1 class="game--title">Tic Tac Toe</h1>
-      <h2 class="game-status"></h2>
-      <div class="game--container" id="squares">
-        <div data-index="0" class="cell" id="cell"></div>
-        <div data-index="1" class="cell" id="cell"></div>
-        <div data-index="2" class="cell" id="cell"></div>
-        <div data-index="3" class="cell" id="cell"></div>
-        <div data-index="4" class="cell" id="cell"></div>
-        <div data-index="5" class="cell" id="cell"></div>
-        <div data-index="6" class="cell" id="cell"></div>
-        <div data-index="7" class="cell" id="cell"></div>
-        <div data-index="8" class="cell" id="cell"></div>
-      </div>
-      <button class="game--restart button" onclick="">Restart Game</button>
-
-      <div id="inputsContainer">
-        <div id="textBoxContainer">
-          <input
-            type="text"
-            class="input"
-            id="playerOneName"
-            placeholder="Player One"
-          />
-          <input
-            type="text"
-            class="input"
-            id="playerTwoName"
-            placeholder="Player Two"
-          />
-        </div>
-        <div id="buttonsContainer">
-          <button class="startButton button is-primary">
-            Start New Game!
-          </button>
-          <button id="endGameButton" class="button is-danger">
-            End Current Game
-          </button>
-        </div>
-      </div>
-    </section>
-    <script src="script.js"></script>
-  </body>
 </html>
