corrected lint error for css

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <button class="startButton button is-primary">
             Start New Game!
           </button>
-          <button id="endGameButton" class="button is-danger">
+          <button class="endGameButton" class="button is-danger">
             End Current Game
           </button>
         </div>
