--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
   </head>
 
   <body>
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
-      <!-- Modal content -->
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <h2 class="game-status"></h2>
-      </div>
-    </div>
+    
 
     <section>
       <h1 class="game--title">Tic Tac Toe</h1>
@@ -35,8 +28,8 @@
         <div data-index="7" class="cell" id="cell"></div>
         <div data-index="8" class="cell" id="cell"></div>
       </div>
-      <button class="game--restart button" onclick="">Restart Game</button>
-
+      <button class="game-restart">Restart Game</button>
+      <div class="score-board"></div>
       <div id="inputsContainer">
         <div id="textBoxContainer">
           <input
@@ -56,12 +49,22 @@
           <button class="startButton button is-primary">
             Start New Game!
           </button>
-          <button id="endGameButton" class="button is-danger">
+          <button class="endGameButton" class="button is-danger">
             End Current Game
           </button>
         </div>
       </div>
     </section>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2 class="winner-status"></h2>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
